[gd_scene load_steps=10 format=2]

[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://screens/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://images/ui/audioOn.png" type="Texture" id=3]
[ext_resource path="res://images/ui/audioOff.png" type="Texture" id=4]
[ext_resource path="res://images/ui/musicOff.png" type="Texture" id=5]
[ext_resource path="res://images/ui/musicOn.png" type="Texture" id=6]
[ext_resource path="res://images/ui/larger.png" type="Texture" id=7]
[ext_resource path="res://images/ui/smaller.png" type="Texture" id=8]
[ext_resource path="res://images/ui/star.png" type="Texture" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -230.0
margin_bottom = -80.0
text = "FLYING_BIRDIE"
align = 1
valign = 1
autowrap = true

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 100.0
margin_right = 150.0
margin_bottom = 143.0
text = "PLAY"

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 150.0
margin_right = 150.0
margin_bottom = 193.0
text = "EXIT"

[node name="BirdColorButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -115.0
margin_top = -60.0
margin_right = -65.0
margin_bottom = -10.0
hint_tooltip = "TOGGLE_BIRD_COLOR"
icon = ExtResource( 9 )

[node name="SoundButton" type="CheckButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -60.0
margin_right = -5.0
margin_bottom = -10.0
hint_tooltip = "TOGGLE_SOUND"
custom_icons/off = ExtResource( 4 )
custom_icons/on = ExtResource( 3 )

[node name="MusicButton" type="CheckButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -60.0
margin_right = 55.0
margin_bottom = -10.0
hint_tooltip = "TOGGLE_MUSIC"
custom_icons/off = ExtResource( 5 )
custom_icons/on = ExtResource( 6 )

[node name="FullscreenButton" type="CheckButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 65.0
margin_top = -60.0
margin_right = 115.0
margin_bottom = -10.0
hint_tooltip = "TOGGLE_FULLSCREEN"
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="BirdColorButton" to="." method="_on_BirdColorButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
